KIALI-1304 Remove deployments/pods and add workloads to service details
