# services/models/service.go
@@ -28,15 +28,12 @@ type ServiceList struct {
 }
 
 type ServiceDetails struct {
-	Name             string              `json:"name"`
-	Namespace        Namespace           `json:"namespace"`
 	Service          Service             `json:"service"`
 	Endpoints        Endpoints           `json:"endpoints"`
 	VirtualServices  VirtualServices     `json:"virtualServices"`
 	DestinationRules DestinationRules    `json:"destinationRules"`
 	Dependencies     map[string][]string `json:"dependencies"`
-	Pods             Pods                `json:"pods"`
-	Workloads        Workloads           `json:"deployments"`
+	Workloads        WorkloadOverviews   `json:"workloads"`
 	Health           ServiceHealth       `json:"health"`
 }
 
@@ -86,9 +83,7 @@ func (s *ServiceDetails) SetServiceDetails(serviceDetails *kubernetes.ServiceDet
 func (s *ServiceDetails) setKubernetesDetails(serviceDetails *kubernetes.ServiceDetails) {
 	s.Service.Parse(serviceDetails.Service)
 	(&s.Endpoints).Parse(serviceDetails.Endpoints)
-	(&s.Pods).Parse(serviceDetails.Pods)
 	(&s.Workloads).Parse(serviceDetails.Deployments)
-	(&s.Workloads).AddAutoscalers(serviceDetails.Autoscalers)
 }
 
 func (s *ServiceDetails) setIstioDetails(istioDetails *kubernetes.IstioDetails) {
